unpackaged/main/default/objects/ProductAndService__c/ProductAndService__c.object-meta.xml
<CustomObject>
    <description>Object to assign products from the product matrix to an opportunity</description>
    <label>Product And Service</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Product And Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products And Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>