unpackaged/main/default/objects/ProductAndService__c/fields/AgreedUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>AgreedUnitPrice__c</fullName>
    <description>Individual Agreed Unit Price</description>
    <label>Agreed Unit Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>