unpackaged/main/default/objects/ProductAndService__c/fields/Category1__c.field-meta.xml
<CustomField>
    <fullName>Category1__c</fullName>
    <description>Product Category 1</description>
    <label>Category 1</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>