unpackaged/main/default/objects/ProductAndService__c/fields/Category2__c.field-meta.xml
<CustomField>
    <fullName>Category2__c</fullName>
    <description>Product Category 2</description>
    <label>Category 2</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>