unpackaged/main/default/objects/ProductAndService__c/fields/Category3__c.field-meta.xml
<CustomField>
    <fullName>Category3__c</fullName>
    <description>Product Category 3</description>
    <label>Category 3</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>