unpackaged/main/default/objects/ProductAndService__c/fields/ProductMatrix__c.field-meta.xml
<CustomField>
    <fullName>ProductMatrix__c</fullName>
    <description>Product matrix record associated with the service/product</description>
    <label>Product Matrix</label>
    <referenceTo>ProductMatrix__c</referenceTo>
    <relationshipLabel>Products And Services</relationshipLabel>
    <relationshipName>Products_And_Services</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>