unpackaged/main/default/objects/ProductAndService__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <description>Product name</description>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>