unpackaged/main/default/objects/ProductAndService__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <description>Type of product</description>
    <label>Product Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>