unpackaged/main/default/objects/ProductAndService__c/fields/Recommended_Retail_Price__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Retail_Price__c</fullName>
    <description>Recommended retail price of the product/service - per unit</description>
    <label>Recommended Retail Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>