unpackaged/main/default/objects/ProductAndService__c/fields/Tariff__c.field-meta.xml
<CustomField>
    <fullName>Tariff__c</fullName>
    <description>Product Tariff (if any)</description>
    <label>Tariff</label>
    <length>255</length>
    <type>Text</type>
</CustomField>