unpackaged/main/default/objects/ProductAndService__c/fields/ZoeyTariffID__c.field-meta.xml
<CustomField>
    <fullName>ZoeyTariffID__c</fullName>
    <description>Zoey Tariff ID of the product (if any)</description>
    <label>Zoey Tariff ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>