unpackaged/main/default/objects/ProductAndService__c/validationRules/Check_Agreed_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Agreed_Price</fullName>
    <active>true</active>
    <description>Check agreed price is greater than / equal 0</description>
    <errorConditionFormula>AgreedUnitPrice__c &lt; 0</errorConditionFormula>
    <errorDisplayField>AgreedUnitPrice__c</errorDisplayField>
    <errorMessage>AGREED UNIT PRICE MUST BE GREATER THAN/EQUAL TO 0</errorMessage>
</ValidationRule>