unpackaged/main/default/objects/ProductAndService__c/validationRules/Check_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Quantity</fullName>
    <active>true</active>
    <description>Check quantity is greater than 0</description>
    <errorConditionFormula>Quantity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>QUANTITY MUST BE GREATER THAN 0</errorMessage>
</ValidationRule>